--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,92 @@
-/*////////////// Fonts //////////////*/
-
-/* link the web font used for the level 1 heading here */
-
-/*////////// Global Styles //////////*/
+@font-face {
+	font-family: 'Baskerville';
+	src: local(fonts/Baskerville.ttc);
+}
 
 body {
 	background: #F3EBE9;
 	font-size: 100%;
-	font-family: 'Times New Roman', serif; 
+	font-family: 'Times New Roman', serif;
 }
 
 .wrapper {
 	width: 960px;
 	margin: 0 auto;
-	background: #fff;
+	background: #FFF;
 	padding: 0 45px 20px;
 }
 
-/* Write all remaining styles here */
+h1 {
+	padding-bottom: 10px;
+	margin: 0 0 5px;
+	font-size: 5em;
+	font-weight: normal;
+	font-family: 'Baskerville', serif;
+	border-bottom: 1px solid #ccc;
+}
+
+h2 {
+	font-size: 2em;
+	color : #6F7F7A;
+}
+
+p {
+	color: #555;
+	margin-bottom: 20px;
+}
+
+.small {
+	font-size: .8em;
+}
+
+a {
+	transition: color 2s ease 0.5s;
+}
+
+img {
+	transition: border 2s ease 0s;
+}
+
+header a{
+	color: rgb(152, 173, 166);
+	text-decoration: none;
+}
+
+header a:hover{
+	color: #6f7f7a;
+}
+
+#featured img {
+	border-color: #98ADA6;
+	border-width: 5px;
+	border-style: solid;
+}
+
+#featured a {
+	color: #1783bb;
+	text-decoration: none;
+}
+
+#featured a:hover {
+	text-decoration: underline;
+}
+
+#Press {
+	margin-bottom: 20px;
+}
+
+#Press img {
+	border: #CCC 5px solid;
+}
+
+#Press img:hover {
+	border: #6f7f7a 5px solid;
+}
+
+#Press a {
+	text-decoration: none;
+}
+
+footer {
+	text-align: right;
+}
